# zoctante

./: .gitignore  8080.c  8080.h  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  comparison.c  comparison.h  i8080.c  i8080.h  machine.c  machine.h  main.c  test.c
roms/: README.md
src/: 8080.c  8080.h  comparison.c  comparison.h  i8080.c  machine.c  machine.h  main.c  raygui.h  test.c  test_machine.c  test_machine.h
